Fix z-index values, add aliases

--- a/src/app/styles/variables/globals.scss
+++ b/src/app/styles/variables/globals.scss
@@ -28,6 +28,7 @@
 
   // z - indexes
   --modal-z-index: 1000;
+  --overlay-z-index: 100;
 
   // Colors
   --red-light: #f00;
