--- a/src/shared/ui/Overlay/Overlay.module.scss
+++ b/src/shared/ui/Overlay/Overlay.module.scss
@@ -5,7 +5,7 @@
     justify-content: center;
     position: fixed;
     inset: 0;
-    z-index: 99;
+    z-index: var(--overlay-z-index);
     cursor: pointer;
     opacity: 0;
     transition: 0.2s opacity;
